--- a/AutoCmdb/templates/host/host_info.html
+++ b/AutoCmdb/templates/host/host_info.html
@@ -305,7 +305,7 @@
                                     </p>
 
 
-                                    <p style="height: 60px">{{ asset_repair.summary }}</p>
+                                    <p style="height: 60px">{{ asset_repair.summary|truncatechars:150 }}</p>
 
 
                                     <ul class="list-inline">
