--- a/AutoCmdb/templates/asset/index.html
+++ b/AutoCmdb/templates/asset/index.html
@@ -19,7 +19,7 @@
     <script src="/static/js/bootstrap-datepicker.zh-TW.min.js"></script>
 
     <!-- Latest compiled and minified JavaScript -->
-     <link rel="stylesheet" href="/static/css/bootstrap-select.css">
+    <link rel="stylesheet" href="/static/css/bootstrap-select.css">
     <script src="/static/js/bootstrap-select.js"></script>
 
 
@@ -30,7 +30,7 @@
 {% block content %}
 
     <ol class="breadcrumb">
-        <li><a href="#">資產管理</a></li>
+        <li><a href="#">資產列表</a></li>
 
     </ol>
 
@@ -121,7 +121,12 @@
 
                 <tr>
                     <td>
-                        {{ forloop.counter }}
+                        {% if forloop.last and page %}
+                            {{ page }}0
+
+                        {% else %}
+                            {{ page|add:"-1"|default:"" }}{{ forloop.counter }}
+                        {% endif %}
                     </td>
 
                     <td name="id" style="display: none">
@@ -198,7 +203,6 @@
                             <span class="form-control-static">{{ asset.purchase_date|date:"Y-m-d" }}</span>
                             <input type="text" class="form-control match-content" style="display:none;">
 
-
                         </td>
                         <td name="price">
                         <span class="form-control-static">
@@ -211,10 +215,12 @@
                     {% endif %}
 
                     <td name="status">
-
                         {{ asset.get_status_display }}
-
                     </td>
+
+{#                    <td name="asset">#}
+{#                        {{ asset.assetbusiness.business.name }}#}
+{#                    </td>#}
 
                     <td>
                         <a href="{% url 'asset_edit' asset.id %}"><i class="fas fa-pen"></i></a>
@@ -226,8 +232,11 @@
 
 
             <tfoot>
-            <th colspan="8">
+            <th colspan="9">
                 <nav aria-label="Page navigation">
+                    <ul class="pagination pull-left">
+                        共{{ paginator.count }}筆
+                    </ul>
                     <ul class="pagination pull-right">
                         {% get_pageer asset_obj search_field %}
                     </ul>
