--- a/AutoCmdb/templates/base.html
+++ b/AutoCmdb/templates/base.html
@@ -201,6 +201,12 @@
         $('#dentSubmenu').collapse();
     {% endif %}
 
+
+    {% url 'busunit' as busunit %}
+    {% if busunit in request.path %}
+        $("#busunitSubmenu").collapse();
+    {% endif %}
+
 </script>
 
 
