--- a/AutoCmdb/templates/asset/home.html
+++ b/AutoCmdb/templates/asset/home.html
@@ -97,7 +97,7 @@
                             <i class="fa fa-newspaper fa-5x"></i>
                         </div>
                         <div class="col-xs-9 text-right">
-                            <div class="huge"></div>
+                            <div class="huge">{{ news_obj.count }}</div>
                             <div>最新消息</div>
                         </div>
                     </div>
