--- a/AutoCmdb/templates/asset/asset_edit.html
+++ b/AutoCmdb/templates/asset/asset_edit.html
@@ -56,7 +56,7 @@
 
     <ul id="myTab" class="nav nav-tabs">
         <li class="active">
-            <a href="#tab_asset" data-toggle="tab">
+            <a href="#tab_info" data-toggle="tab">
                 資產信息
             </a>
         </li>
@@ -64,6 +64,12 @@
         <li>
             <a href="#tab_repair" data-toggle="tab">
                 維修紀錄
+            </a>
+        </li>
+
+        <li>
+            <a href="#tab_assets" data-toggle="tab">
+                關聯資產
             </a>
         </li>
 
@@ -76,7 +82,7 @@
 
         <div id="myTabContent" class="tab-content">
 
-            <div class="tab-pane fade in active" id="tab_asset">
+            <div class="tab-pane fade in active" id="tab_info">
 
                 <div class="panel panel-default" style="padding: 20px">
                     <form role="form" method="post" id="form">
@@ -91,13 +97,9 @@
 
                         <div class="form-group">
                             <label> 基本信息</label>
-
-
                         </div>
 
                         <div class="row" style="padding-left: 15px">
-
-                            {{ forms_obj.name }}
 
                             <div class="col-md-6 form-group has-feedback">
                                 {{ forms_obj.category.label_tag }}
@@ -281,6 +283,128 @@
                 {% endfor %}
             </div>
 
+
+            <div class="tab-pane fade" id="tab_assets">
+
+                <div class="panel panel-default" style="padding: 20px">
+
+                    <div class="form-group">
+                        <label> 關聯資產</label>
+                    </div>
+
+                    <div class="row" style="padding-left: 15px">
+
+
+                        <div class="col-md-12 form-group">
+
+                            <table class="table" id="mytable" style="margin-top: 20px">
+                                <thead>
+                                <tr>
+                                    <th>類型</th>
+                                    <th>資產編號</th>
+                                    <th>備註</th>
+                                    <th>操作</th>
+                                </tr>
+                                </thead>
+
+                                <tbody>
+                                {% for relation_assets in relation_assets_obj %}
+
+                                    <tr>
+                                        <td name="id" style="display: none">
+                                            <input type="text" name="id" class="form-control"
+                                                   value="{{ relation_assets.id }}"/>
+                                        </td>
+
+                                        <td name="asset_obj" style="display: none">
+                                            <input type="text" name="asset_obj" class="form-control"
+                                                   value="{{ relation_assets.asset_obj.id }}"/>
+                                        </td>
+
+
+                                        <td name="category">
+                                            <span>
+                                                {{ relation_assets.assets.category }}
+                                            </span>
+                                            <select name="category" onchange="foo(this)" class="form-control"
+                                                    id="id_category" style="display: none">
+
+                                                <option value="">-----</option>
+
+                                                {% for category in category_obj %}
+                                                    {% if relation_assets.assets.category  ==  category %}
+                                                        <option selected
+                                                                value="{{ category.id }}">{{ category }}
+                                                        </option>
+                                                    {% else %}
+                                                        <option value="{{ category.id }}">{{ category }}</option>
+                                                    {% endif %}
+
+                                                {% endfor %}
+
+                                            </select>
+
+                                        </td>
+
+                                        <td name="name">
+                                            <span>
+                                                {{ relation_assets.assets }}
+                                            </span>
+
+                                            <select name="assets" class="form-control" required="" id="id_assets"
+                                                    style="display:none;">
+                                                <option value="{{ relation_assets.assets.id }}">{{ relation_assets.assets }}</option>
+                                            </select>
+                                        </td>
+
+                                        <td name="remarks">
+                                            <span>
+                                                {{ relation_assets.remarks|default:"" }}
+                                            </span>
+                                            <input type="text" name="remarks" maxlength="64" class="form-control"
+                                                   id="id_remarks" style="display: none">
+                                        </td>
+
+                                        <td>
+                                            <a href="#"><i class="fas fa-pen"></i></a>
+                                        </td>
+
+                                    </tr>
+                                {% endfor %}
+
+                                <tr>
+                                    <td name="ids" style="display: none">
+                                        <input name="id" value="{{ asset_obj.id }}">
+                                    </td>
+
+                                    <td name="category">
+                                        {{ ata_forms_obj.category }}
+                                    </td>
+
+                                    <td name="asset_obj">
+                                        {{ ata_forms_obj.assets }}
+                                    </td>
+
+                                    <td name="remarks">
+                                        {{ ata_forms_obj.remarks }}
+                                    </td>
+
+                                    <td>
+                                        <a href="#tab_assets"><i class="fas fa-plus"></i></a>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label> 被關聯資產</label>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
 
@@ -327,7 +451,20 @@
 {% block extra-js %}
 
     <script>
+        var csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
 
+        function csrfSafeMethod(method) {
+            // these HTTP methods do not require CSRF protection
+            return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+        }
+
+        $.ajaxSetup({
+            beforeSend: function (xhr, settings) {
+                if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+                    xhr.setRequestHeader("X-CSRFToken", csrftoken);
+                }
+            }
+        });
 
         // 提交之後 將所有disabled刪除
         function BeforeFormSubmit(e) {
@@ -411,10 +548,204 @@
 
         });
 
+
+        var data = {{ data|safe }};
+
+        function foo(e) {
+            console.log('foo');
+            console.log(e.value);
+            {#document.getElementById("id_assets").options.length = 1;#}
+
+            ths = $(this);
+            ele = e;
+
+            id_assets = $(e).closest("tr").find("#id_assets");
+
+            id_assets.find('option')
+                .remove()
+                .end()
+                .append('<option value="">--------</option>')
+                .val('')
+            ;
+
+
+            $.each(data[e.value], function (i, item) {
+                id_assets.append($('<option>', {
+                    value: item.id,
+                    text: item.name,
+                }));
+            });
+            id_assets.removeAttr('disabled');
+        }
+
+
         $(document).ready(function () {
 
+            if (window.location.hash != "") {
+                $('.nav-tabs a[href="' + window.location.hash + '"]').tab('show')
+            }
+        });
+
+        //編輯 EditData : Change icon
+        $("#mytable").on('click', ".fa-pen", function (ele) {
+
+            console.log("pen");
+
+            tr = $(this).closest("tr");
+            tds = tr.find('td');
+            var category = tds.find('[name="category"]').val();
+            var assetsid = tds.find('[name="assets"]').val();
+            console.log('foo');
+            console.log(category);
+            console.log(assetsid);
+            {#document.getElementById("id_assets").options.length = 1;#}
+            var id_assets = tr.find("#id_assets");
+            id_assets.find('option')
+                .remove()
+                .end()
+                .append('<option value="">--------</option>')
+                .val('')
+            ;
+
+            $.each(data[category], function (i, item) {
+                id_assets.append($('<option>', {
+                    value: item.id,
+                    text: item.name,
+                }));
+            });
+
+            id_assets.val(assetsid);
+            id_assets.removeAttr('disabled');
+
+
+            $.each(tds, function (i, ele) {
+                var span_tag = $(this).find("span");
+                var input_tag = $(this).find("input");
+                var select_tag = $(this).find("select");
+
+                //user
+                select_list = ['category', 'name'];
+                input_list = ['remarks'];
+                n = $(this).attr("name");
+                console.log($(this));
+                console.log(n);
+                if (select_list.includes(n)) {
+                    //console.log(n);
+                    span_tag.hide();
+                    $(this).find('select').show();
+                }
+                if (input_list.includes(n)) {
+                    //console.log(n);
+                    span_tag.hide();
+                    $(this).find('input').show();
+                }
+
+            });
+
+            $(this).attr('data-icon', 'file');
 
         });
+
+
+        //新增 AddData : ADD icon
+        $("#mytable").on('click', ".fa-plus", function (ele) {
+            console.log('plus');
+
+
+            tds = $(this).closest("tr").find('td');
+            tr = $(this).closest("tr");
+
+            var id = tds.find('[name="id"]').val();
+            var category = tds.find('[name="category"]').val();
+            var assets = tds.find('[name="assets"]').val();
+            var remarks = tds.find('[name="remarks"]').val();
+
+
+            data = {
+                csrfmiddlewaretoken: '{{ csrf_token }}',
+                asset_obj: id,
+                category: category,
+                assets: assets,
+                remarks: remarks
+            };
+
+            resurl = document.location.origin + "{% url 'asset_edit' asset_obj.id %}#tab_assets";
+
+            $.ajax({
+                url: "{% url 'ara_index' %}",
+                data: data,
+                type: 'POST',
+                async: false,
+
+                success: function (callback) {
+                    console.log(callback);
+
+                    if (callback.status == 'ok') {
+                        put_status = true;
+                    }
+                },
+                error: function () {
+                    put_status = false
+
+                }
+            });
+            if (put_status) {
+                console.log("OK");
+                location.reload()
+            }
+
+        });
+
+        $("#mytable").on('click', ".fa-file", function (ele) {
+
+            console.log('save');
+            $(this).attr('data-icon', 'pen');
+
+
+            tr = $(this).closest('tr');
+            tds = tr.find('td');
+
+            var id = tds.find('[name="id"]').val();
+            var category = tds.find('[name="category"]').val();
+            var assets = tds.find('[name="assets"]').val();
+            var remarks = tds.find('[name="remarks"]').val();
+            var asset_obj = tds.find('[name="asset_obj"]').val();
+
+            var postData = {
+                csrfmiddlewaretoken: '{{ csrf_token }}',
+                id: id,
+                asset_obj: asset_obj,
+                category: category,
+                assets: assets,
+                remarks: remarks
+            };
+            console.log(postData);
+
+            $.ajax({
+                url: "{% url 'ara_index' %}",
+                data: postData,
+                type: 'PUT',
+                async: false,
+                success: function (callback) {
+                    console.log(callback);
+                    if (callback.status == 'ok') {
+                        put_status = true
+                    } else {
+                        put_status = false
+                    }
+                },
+                error: function () {
+                    put_status = false
+                }
+            });
+
+            if (put_status) {
+                console.log("OK");
+
+            }
+
+
+        })
 
     </script>
 
