--- a/AutoCmdb/templates/asset/busunit.html
+++ b/AutoCmdb/templates/asset/busunit.html
@@ -48,6 +48,12 @@
 
                 <form class="form-inline" method="get">
 
+
+                    <div class="form-group" style="display: none">
+                        <input type="text" class="form-control" name='contacts' id="search" placeholder=""
+                               value="{{ contacts }}">
+                    </div>
+
                     <div class="form-group">
                         <label for="inputsearch" class="col-form-label">搜尋</label>
                         <input type="text" class="form-control" name='name' id="search" placeholder=""
@@ -123,12 +129,7 @@
 
                 <tr>
                     <td>
-                        {% if forloop.last and page %}
-                            {{ page }}0
-
-                        {% else %}
-                            {{ page|add:"-1"|default:"" }}{{ forloop.counter }}
-                        {% endif %}
+                        {% pagenumber forloop.counter contacts page %}
                     </td>
 
                     <td name="id" style="display: none">
@@ -210,6 +211,13 @@
                 <nav aria-label="Page navigation">
                     <ul class="pagination pull-left">
                         共{{ paginator.count }}筆
+                        <label style="padding-left: 20px">顯示</label>
+                        <select class="selectpicker" name='contacts' data-width="fit" id='contacts'>
+                            <option value=10>10</option>
+                            <option value=20>20</option>
+                            <option value=50>50</option>
+                            <option value=100>100</option>
+                        </select>筆
                     </ul>
                     <ul class="pagination pull-right">
                         {% get_pageer asset_obj search_field %}
@@ -254,7 +262,13 @@
             $(".selectpicker[name='cate_id']").selectpicker('val', {{ cate_id }});
             $(".selectpicker[name='dent_id']").selectpicker('val', {{ dent_id }});
             $(".selectpicker[name='busunit_id']").selectpicker('val', {{ busunit_id }});
+            $(".selectpicker[name='contacts']").selectpicker('val', {{ contacts }});
 
+            contacts.onchange = function () {
+                //console.log(this)
+                //console.log($(this).val())
+                location.href = location.origin + location.pathname + "?contacts=" + $(this).val() + ""
+            };
 
             //編輯 EditData : Change icon
             $("#mytable").on('click', ".fa-pen", function (ele) {
