--- a/AutoCmdb/templates/asset_repair/index.html
+++ b/AutoCmdb/templates/asset_repair/index.html
@@ -57,6 +57,11 @@
 
                 <form class="form-inline" method="get">
 
+                    <div class="form-group" style="display: none">
+                        <input type="text" class="form-control" name='contacts' id="search" placeholder=""
+                               value="{{ contacts }}">
+                    </div>
+
                     <div class="form-group">
                         <label for="inputsearch" class="col-form-label">搜尋</label>
                         <input type="text" class="form-control" name='name' id="search" placeholder=""
@@ -111,7 +116,8 @@
             {% for asset_repair in asset_repair_obj %}
                 <tr>
                     <td>
-                        {{ forloop.counter }}
+                        {% pagenumber forloop.counter contacts page %}
+
                     </td>
 
                     <td>
@@ -171,6 +177,16 @@
 
             <th colspan="10">
                 <nav aria-label="Page navigation">
+                    <ul class="pagination pull-left">
+                        共{{ paginator.count }}筆
+                        <label style="padding-left: 20px">顯示</label>
+                        <select class="selectpicker" name='contacts' data-width="fit" id='contacts'>
+                            <option value=10>10</option>
+                            <option value=20>20</option>
+                            <option value=50>50</option>
+                            <option value=100>100</option>
+                        </select>筆
+                    </ul>
                     <ul class="pagination pull-right">
                         {% get_pageer asset_repair_obj search_field %}
                     </ul>
@@ -240,6 +256,14 @@
 
 
         $(".selectpicker[name='status']").selectpicker('val', {{ status }});
+
+        $(".selectpicker[name='contacts']").selectpicker('val', {{ contacts }});
+
+        contacts.onchange = function () {
+            //console.log(this)
+            //console.log($(this).val())
+            location.href = location.origin + location.pathname + "?contacts=" + $(this).val() + ""
+        };
 
         function record_del(ele) {
 
