--- a/AutoCmdb/templates/user/index.html
+++ b/AutoCmdb/templates/user/index.html
@@ -47,6 +47,12 @@
 
                 <form class="form-inline" method="get">
 
+
+                    <div class="form-group" style="display: none">
+                        <input type="text" class="form-control" name='contacts' id="search" placeholder=""
+                               value="{{ contacts }}">
+                    </div>
+
                     <div class="form-group">
                         <label for="inputsearch" class="col-form-label">搜尋</label>
                         <input type="" class="form-control" name='name' id="search" placeholder="" value="{{ name }}">
@@ -87,7 +93,7 @@
             <table class="table" id="mytable" style="margin-top: 20px">
                 <thead>
                 <tr>
-
+                    <th>排序</th>
                     <th>編號</th>
                     <th>名稱</th>
                     <th>英文名</th>
@@ -101,6 +107,10 @@
                 {% for user in user_obj %}
 
                     <tr>
+                        <td>
+                            {% pagenumber forloop.counter contacts page %}
+
+                        </td>
                         <td>{{ user.code }}</td>
                         <td>{{ user.name }}</td>
                         <td>{{ user.user.username }}</td>
@@ -119,6 +129,16 @@
                 <tfoot>
                 <th colspan="7">
                     <nav aria-label="Page navigation">
+                        <ul class="pagination pull-left">
+                            共{{ paginator.count }}筆
+                            <label style="padding-left: 20px">顯示</label>
+                            <select class="selectpicker" name='contacts' data-width="fit" id='contacts'>
+                                <option value=10>10</option>
+                                <option value=20>20</option>
+                                <option value=50>50</option>
+                                <option value=100>100</option>
+                            </select>筆
+                        </ul>
                         <ul class="pagination pull-right">
                             {% get_pageer user_obj search_field %}
                         </ul>
@@ -204,6 +224,14 @@
             $(".selectpicker[name='sex']").selectpicker('val', '{{ sex }}');
             $(".selectpicker[name='dent_id']").selectpicker('val', {{ dent_id }});
 
+            $(".selectpicker[name='contacts']").selectpicker('val', {{ contacts }});
+
+            contacts.onchange = function () {
+                //console.log(this)
+                //console.log($(this).val())
+                location.href = location.origin + location.pathname + "?contacts=" + $(this).val() + ""
+            };
+
 
         });
 
@@ -238,8 +266,7 @@
                     if (callback.status == 'ok') {
                         $("#userform_add [name='code']").val(callback.data);
                         $("#userform_add [name='code']").removeAttr("disabled");
-                    }
-                    else {
+                    } else {
                         console.log("請求錯誤");
                         $("#userform_add [name='code']").val("");
                         $("#userform_add [name='code']").attr("disabled", "disabled");
