--- a/AutoCmdb/templates/asset/asset_edit.html
+++ b/AutoCmdb/templates/asset/asset_edit.html
@@ -101,6 +101,13 @@
 
                         <div class="row" style="padding-left: 15px">
 
+                        <div class="col-md-12 form-group has-feedback" style="display: none">
+                                {{ forms_obj.name.label_tag }}
+                                {{ forms_obj.name }}
+                                <span class="glyphicon form-control-feedback" style="margin-right: 15px;"></span>
+
+                            </div>
+
                             <div class="col-md-6 form-group has-feedback">
                                 {{ forms_obj.category.label_tag }}
                                 {{ forms_obj.category }}
